[package]
name = "blog-os"
version = "0.1.0"
authors = ["Huy Nguyen <huyvn.steven@gmail.com>"]

[package.metadata.bootimage]
default-target = "x86_64-blog_os"

# the profile used for `cargo build`
[profile.dev]
#panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
#panic = "abort" # disable stack unwinding on panic

[dependencies]
volatile = "0.2.3"
spin = "0.4.6"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dev-dependencies]
array-init = "0.0.3"